Deployment1.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio 
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookclub
  namespace: fast-track-istio 
  labels:
    app: bookclub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookclub
  template:
    metadata:
      labels:
        app: bookclub
    spec:
      containers:
        - name: bookclub
          image: githubtestingreg.azurecr.io/helloaspnetcore
          ports:
            - containerPort: 80
            
          resources:
            limits:
              cpu: "200m"
              memory: 200Mi
            requests:
              cpu: "100m"
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bookclub
  namespace: fast-track-istio
  labels:
    app: bookclub
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: bookclub
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: book-club-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-web
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-club-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - "*"
  gateways:
    - book-club-gateway
  http:
  - match:
    - uri:
        prefix: /weatherforecast
    route:
      - destination:
          host: bookclub
          port:
            number: 8080
